# sap_automation

./: .gitignore  LICENSE  pyproject.toml
src/sap_automation/: __init__.py  sap.py
src/sap_automation/client/: config.py  connection.py  session.py
src/sap_automation/components/: __init__.py  multi_selection.py  table.py
src/sap_automation/core/: logging.py  retry.py  sap_errors.py  timeout.py
src/sap_automation/exceptions/: __init__.py  errors.py
src/sap_automation/models/: frs.py
src/sap_automation/transactions/: base.py  ml81n.py
src/sap_automation/transactions/mm/: __init__.py  ml81n.py
tests/unit/: test_config.py  test_version.py
