[project]
name = "sap-automation"
version = "0.2.0"
description = "Biblioteca para automatização de tarefas SAP"
authors = [{ name = "Adao Oliveira", email = "adaum79@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.2",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
